src/components/CampaignSettings/CampaignSettings.scss
.tab-notification-container{
  padding: 0px !important;

  .tab-notification-box {
    padding: 20px 5px !important;
    .new-campaign-header {
      display: flex;
      button {
        height: 35px;
        margin: 1% 3% !important;
      }
    }
  }
  a{
  &.nav-link.active.pb-3.pt-3 {
    &:hover {
      color: #fff !important;
      border-top-right-radius: 0px !important;
      border-bottom-right-radius: 0px !important;
    }
  }

}

.btn.btn-custom{
  background: #097fff;
}
.nav.nav-pills {
    > li > a.active {
      font-family: "Rubik", sans-serif;
    }
    .nav-item.show.nav-link, .nav-link.active {
      background: #097fff;
    }
  
  }
 


  .new-campaign-header {
    position:  relative;
    padding-bottom:  5px;
    font-weight: bold !important;
  }
  .textTransform{
      text-transform: capitalize!important;
  }
  .new-campaign-tab-pills {
    background: #f4f6f8;
    margin-left: -1.3% !important;
    margin-right: -1.3% !important;
  }
  .tab-content {
    .align-install-btn {
      width: 18.7%;
    }
  }
}

.btn.btn-custom.goliveRight{
      position: absolute;
      right: 0;
      bottom: 5px;

}

